Fix up column CSS for collapsing page

--- a/app/assets/stylesheets/static_pages.scss
+++ b/app/assets/stylesheets/static_pages.scss
@@ -3,11 +3,14 @@
 // You can use Sass (SCSS) here: http://sass-lang.com/
 
 .all-things {
-  display: grid;
-  grid-template-columns: .25fr 1fr;
+
   padding: 50px 0 0 0;
   font-family: "Merriweather", "Georgia", serif;
 
+}
+.main-stuff {
+  display: grid;
+  grid-template-columns: .25fr 1fr;
 }
 .logged-in-nav, .logged-out-nav {
   display: flex;
